syntax = "proto3";
option go_package = "./pb";

enum CHAT_TYPES {
  Private = 0;
  Group = 1;
}


message Message {
  Contact author = 1;
  string id = 2;
  int64 createdAt = 3 [jstype = JS_NUMBER];
  string type = 4;
  string sig = 6;
  string chatId = 7;
  string text = 8;
  CHAT_TYPES chatType = 9;
}

message Contact {
  string name = 1;
  string id = 2;
}


message Request {
  CHAT_TYPES chatType = 1;
  string Id = 2;
  repeated Contact members = 3;
  repeated Contact admins = 4;
  string name = 5;
}

message ChatEvent {
  enum Event {
    Deliverd = 0;
    Seen = 1;
  }
  string chatId = 1;
  string msgId = 2;
  Event  event = 3;
}

message Ack {}